# simnotes

./: Cargo.toml  README.md
src/: main.rs
src/routes/: mod.rs
src/service/: mod.rs
src/webapp/: mod.rs
web-src/: index.html  package.json  pnpm-lock.yaml  vite.config.js
web-src/src/: UI.ts  index.js
