[package]
name = "simnotes_afire"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
axum = "0.6.9"
axum-extra = { version = "0.6.0", features = ["spa"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
